# VapourSynth-TColorMask

./: CMakeLists.txt  README.md  TColorMask.sln
TColorMask/: CMakeLists.txt  TColorMask.cpp  TColorMask.vcxproj  TColorMask.vcxproj.filters
